--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     --font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+
 html {
     background-color: var(--background-color);
 }
@@ -22,7 +23,7 @@ body {
 nav {
     background-color: var(--background-color);
     display: grid;
-    grid-template: 1fr / 0.1fr min-content 1fr 1fr 0.5fr;
+    grid-template: 1fr / 0.5fr min-content 1fr 1fr 0.5fr;
 }
 
 #nav-logo {
@@ -49,15 +50,14 @@ button.nav-button {
     font-weight: 600;
     color: var(--text-color);
     margin: 15px;
-    width: 100px;
+    width: max(100px, 1vw);
     border: none;
     outline: none;
     border-radius: 0.7em;
 }
 
 #dark-mode-button {
-    width: 60px;
-    background-color: var(--main-color);
+    width: 70px;
 }
 
 button.nav-button:hover {
@@ -77,6 +77,7 @@ button.nav-button:hover {
 #aside-grid {
     display: grid;
     grid-template: 1fr / 1fr auto;
+    margin-top: 50px;
 }
 
 aside {
@@ -85,7 +86,7 @@ aside {
     height: 70vh;
     margin-left: 50px;
     margin-right: 5vw;
-    width: min(25vw, 300px);
+    width: 270px;
     top: 15vh;
     font-family: var(--font-family);
     color: var(--text-color);
@@ -110,3 +111,6 @@ aside::-webkit-scrollbar {
     color: var(--text-color);
     font-size: 15px;
 }
+
+
+
