--- a/small-style.css
+++ b/small-style.css
@@ -6,15 +6,20 @@
     }
     
     button.nav-button {
-        font-size: 15px;
+        font-size: 14px;
         margin: 5px;
         width: max(70px, 8vw);
     }
     
     #dark-mode-button {
-        width: 70px;
+        width: 65px;
     }
     
+    #dark-mode-button-img {
+        height: 25px;
+        width: 25px;
+    }
+
     #nav-break {
         height: 3px;
     }
