--- a/tablet-style.css
+++ b/tablet-style.css
@@ -21,13 +21,18 @@
     }
     
     button.nav-button {
-        font-size: 15px;
+        font-size: 13px;
         margin: 5px;
         width: max(70px, 8vw);
     }
     
     #dark-mode-button {
-        width: 70px;
+        width: 50px;
+    }
+
+    #dark-mode-button-img {
+        height: 20px;
+        width: 20px;
     }
     
     #nav-break {
