--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ button.nav-button {
     font-size: 15px;
     font-family: var(--font-family);
     font-weight: 600;
+    text-align: center;
     color: var(--text-color);
     margin: 15px;
     width: max(100px, 1vw);
@@ -66,6 +67,7 @@ button.nav-button:hover {
 }
 
 #dark-mode-button-img {
+
     height: 30px;
     width: 30px;
 }
