--- a/tablet-style.css
+++ b/tablet-style.css
@@ -1,5 +1,5 @@
 /* sm */
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 640px) and (min-width: 476px) {
     nav {
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr;
@@ -23,6 +23,8 @@
     button.nav-button {
         font-size: 13px;
         margin: 5px;
+        padding-top: 5px;
+        padding-bottom: 5px;
         width: max(70px, 8vw);
     }
     
