--- a/tablet-style.css
+++ b/tablet-style.css
@@ -22,13 +22,14 @@
     
     button.nav-button {
         font-size: 13px;
-        margin: 5px;
-        padding-top: 5px;
-        padding-bottom: 5px;
-        width: max(70px, 8vw);
+        margin: 5px 0px 5px 0px;
+        padding: 5px 0px 5px 0px;
+        text-align: center;
+        width: 75px;
     }
     
     #dark-mode-button {
+        text-align: center;
         width: 50px;
     }
 
