--- a/tablet-style.css
+++ b/tablet-style.css
@@ -9,6 +9,7 @@
         grid-row-start: 1;
         grid-column-start: 1;
         font-size: 25px;
+        margin-top: 25px;
         justify-self: center;
         align-self: center;
     }
