--- a/mobile-style.css
+++ b/mobile-style.css
@@ -10,6 +10,7 @@
         grid-column-start: 1;
         font-size: 20px;
         margin-top: 25px;
+        height: 50px;
         justify-self: center;
         align-self: center;
     }
