--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ nav {
     width: max-content;
     color: var(--main-color);
     font-size: 30px;
+    height: 70px;
     font-family: var(--font-family);
     font-weight: 600;
     justify-content: center;
