--- a/small-style.css
+++ b/small-style.css
@@ -5,6 +5,8 @@
         font-size: 25px;
         height: 70px;
         text-align: center;
+        justify-self: center;
+        align-self: center;
     }
     
     button.nav-button {
