--- a/tablet-style.css
+++ b/tablet-style.css
@@ -4,10 +4,21 @@
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr;
     }
-    
-    #nav-logo {
+
+    #nav-logo-container {
         grid-row-start: 1;
         grid-column-start: 1;
+        width: max-content;
+        margin-top: 25px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        justify-self: center;
+        align-self: center;
+    }
+    
+    #nav-logo {
         font-size: 25px;
         margin-top: 25px;
         height: 50px;
