--- a/mobile-style.css
+++ b/mobile-style.css
@@ -4,19 +4,6 @@
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr;
     }
-
-    #nav-logo-container {
-        grid-row-start: 1;
-        grid-column-start: 1;
-        width: max-content;
-        margin-top: 25px;
-        height: 50px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        justify-self: center;
-        align-self: center;
-    }
     
     #nav-logo {
         grid-row-start: 1;
@@ -24,6 +11,7 @@
         font-size: 20px;
         margin-top: 25px;
         height: 50px;
+        line-height: 50px;
         justify-self: center;
         align-self: center;
     }
