--- a/small-style.css
+++ b/small-style.css
@@ -4,9 +4,8 @@
     #nav-logo {
         font-size: 25px;
         height: 70px;
+        line-height: 70px;
         text-align: center;
-        justify-self: center;
-        align-self: center;
     }
     
     button.nav-button {
