--- a/style.css
+++ b/style.css
@@ -26,23 +26,13 @@ nav {
     grid-template: 1fr / 0.5fr min-content 1fr 1fr 0.5fr;
 }
 
-#nav-logo-container {
-    grid-column-start: 2;
-    width: max-content;
-    height: 70px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    justify-self: center;
-    align-self: center;
-}
-
 #nav-logo {
     grid-column-start: 2;
     width: max-content;
     color: var(--main-color);
     font-size: 30px;
     height: 70px;
+    line-height: 70px;
     font-family: var(--font-family);
     font-weight: 600;
     justify-content: center;
@@ -132,6 +122,3 @@ aside::-webkit-scrollbar {
     font-size: 15px;
     overflow-x: hidden;
 }
-
-
-
