--- a/tablet-style.css
+++ b/tablet-style.css
@@ -11,6 +11,7 @@
         font-size: 25px;
         margin-top: 25px;
         height: 50px;
+        line-height: 50px;
         justify-self: center;
         align-self: center;
     }
