cleanup repo and pages

--- a/styles/mobile-style.css
+++ b/styles/mobile-style.css
@@ -71,7 +71,7 @@
     
     /* MAIN SECTIONS */
     
-    #main-content {
+    #about {
         grid-column-start: 1;
         width: 80vw;
     }
