--- a/styles/mobile-style.css
+++ b/styles/mobile-style.css
@@ -1,5 +1,5 @@
 /* xs */
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 750px) {
     nav {
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr;
@@ -74,5 +74,15 @@
     #about {
         grid-column-start: 1;
         width: 80vw;
+    }
+
+    /* RESUME */
+    
+    span.text-long {
+        display: none;
+    }
+
+    span.text-tiny {
+        display: inline;
     }
 }
