--- a/styles/resume.css
+++ b/styles/resume.css
@@ -2,6 +2,8 @@
     color: var(--text-color);
     margin: 0vw 10vw 0vw 10vw;
     width: 80vw;
+    font-family: var(--font-family);
+    font-size: 12px;
 }
 
 section.resume-container {
@@ -12,13 +14,13 @@ section.resume-container {
 }
 
 div.resume-header {
-    position: relative;
+    position: static;
     width: min(100%, 1000px);
     text-align: center;
     height: min-content;
     align-self: center;
     font-family: var(--font-family);
-    font-size: 25px;
+    font-size: 18px;
     margin: 25px 0px 25px 0px;
     padding: 0px 0px 7px 0px;
     border-top: 0px;
@@ -39,7 +41,7 @@ div.resume-item {
     flex-direction: row;
     justify-content: space-between;
     padding: 0px 30px 0px 30px;
-    font-size: 16px;
+    font-size: 12px;
     align-self: center;
     width: min(100%, 1000px);
 }
@@ -47,7 +49,7 @@ div.resume-item {
 div.resume-item-static {
     display: static;
     padding: 0px 30px 0px 30px;
-    font-size: 16px;
+    font-size: 12px;
     align-self: center;
     width: min(100%, 1000px);
 }
