--- a/styles/style.css
+++ b/styles/style.css
@@ -133,6 +133,9 @@ button.unlinked-nav-button:hover {
 aside {
     grid-column-start: 4;
     position: sticky;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: var(--background-color);
     height: 70vh;
     width: 270px;
@@ -141,6 +144,27 @@ aside {
     color: var(--text-color);
     font-size: 15px;
     overflow-y: scroll;
+}
+
+#aside-header {
+    position: static;
+    width: 100%;
+    text-align: center;
+    height: min-content;
+    font-family: var(--font-family);
+    font-size: 18px;
+    margin: 25px 0px 25px 0px;
+    padding: 0px 0px 7px 0px;
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    border-bottom: 3px;
+    border-color: var(--main-color);
+    border-style: solid;
+}
+
+div.aside-content {
+    margin: 0px;
 }
 
 aside::-webkit-scrollbar {
@@ -165,7 +189,7 @@ aside::-webkit-scrollbar {
 
 section {
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 10px; 
     width: 99%;
     height: 700px;
     border-color: red;
