--- a/styles/style.css
+++ b/styles/style.css
@@ -192,9 +192,9 @@ section {
     margin-bottom: 10px; 
     width: 99%;
     height: 700px;
-    border-color: red;
+    /* border-color: red;
     border-width: 2px;
-    border-style: solid;
+    border-style: solid; */
 }
 
 div.footer-space {
