--- a/styles/mobile-style.css
+++ b/styles/mobile-style.css
@@ -80,12 +80,12 @@
     #introduction {
         display: grid;
         position: relative;
-        grid-template: 325px 1fr 1fr / 1fr;
+        grid-template: 1fr max-content max-content / 1fr;
     }
 
     #hello-container {
         display: grid;
-        grid-template: 1fr / 1fr;
+        grid-template: max-content 1fr / 1fr;
         grid-row-start: 1;
         grid-column-start: 1;
         grid-column-end: -1;
@@ -94,8 +94,10 @@
     }
 
     #face-image {
-        top: 50px;
+        position: static;
+        grid-row-start: 2;
         justify-self: center;
+        align-self: center;
     }
 
     #hello {
@@ -106,6 +108,16 @@
 
     br.superficial {
         display: none;
+    }
+
+    #summary {
+        align-self: start;
+        margin-top: 0px;
+        margin-bottom: 0px;
+    }
+
+    #socials {
+        margin-top: 40px;
     }
 
     /* RESUME */
