move about to the center of the page

--- a/styles/small-style.css
+++ b/styles/small-style.css
@@ -1,12 +1,41 @@
 /* md */
-@media screen and (max-width: 1500px) and (min-width: 1151px) {
+@media screen and (max-width: 1500px) and (min-width: 1201px) {
 
     aside {
+        right: 15px;
         width: 200px;
     }
 
     #about {
         width: 70vw;
+    }
+
+    #about {
+        position: static;
+        margin: 0px auto 0px auto;
+        display: flex;
+        flex-direction: column;
+        width: max-content;
+        align-items: flex-end;
+        background-color: var(--background-color);
+        font-family: var(--font-family);
+        color: var(--text-color);
+        font-size: 15px;
+        overflow-x: hidden;
+    }
+    
+    #main-content {
+        grid-column-start: 2;
+        justify-self: center;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: flex-end;
+        background-color: var(--background-color);
+        font-family: var(--font-family);
+        color: var(--text-color);
+        font-size: 15px;
+        overflow-x: hidden;
     }
     
 }
