--- a/styles/style.css
+++ b/styles/style.css
@@ -132,7 +132,8 @@ button.unlinked-nav-button:hover {
 
 aside {
     grid-column-start: 4;
-    position: sticky;
+    position: fixed;
+    right: 5vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -174,6 +175,20 @@ aside::-webkit-scrollbar {
 /* MAIN SECTIONS */
 
 #about {
+    position: static;
+    margin: 0px auto 0px auto;
+    display: flex;
+    flex-direction: column;
+    width: max-content;
+    align-items: flex-end;
+    background-color: var(--background-color);
+    font-family: var(--font-family);
+    color: var(--text-color);
+    font-size: 15px;
+    overflow-x: hidden;
+}
+
+#main-content {
     grid-column-start: 2;
     justify-self: center;
     display: flex;
@@ -191,6 +206,9 @@ section {
     margin-top: 10px;
     margin-bottom: 10px; 
     width: 100%;
+    border-color: red;
+    border-width: 2px;
+    border-style: solid;
 }
 
 div.footer-space {
