--- a/styles/style.css
+++ b/styles/style.css
@@ -176,6 +176,7 @@ aside::-webkit-scrollbar {
 
 #about {
     position: static;
+    padding: 15px;
     margin: 0px auto 0px auto;
     display: flex;
     flex-direction: column;
@@ -206,9 +207,9 @@ section {
     margin-top: 10px;
     margin-bottom: 10px; 
     width: 100%;
-    border-color: red;
+    /* border-color: red;
     border-width: 2px;
-    border-style: solid;
+    border-style: solid; */
 }
 
 div.footer-space {
