--- a/styles/smaller-style.css
+++ b/styles/smaller-style.css
@@ -19,8 +19,9 @@
         overflow-x: hidden;
     }
     
-    #main-content {
+    div.main-content {
         grid-column-start: 2;
+        grid-column-end: 5;
         justify-self: center;
         display: flex;
         flex-direction: column;
