--- a/styles/style.css
+++ b/styles/style.css
@@ -121,13 +121,9 @@ button.unlinked-nav-button:hover {
 
 /* ASIDE */
 
-#aside-grid {
+div.aside-grid {
     display: grid;
     grid-template: 1fr / 5vw 70vw 5vw auto 5vw;
-}
-
-#aside-separator {
-    min-width: 50px;
 }
 
 aside {
@@ -147,7 +143,7 @@ aside {
     overflow-y: scroll;
 }
 
-#aside-header {
+div.aside-header {
     position: static;
     width: 100%;
     text-align: center;
@@ -189,17 +185,18 @@ aside::-webkit-scrollbar {
     overflow-x: hidden;
 }
 
-#main-content {
+div.main-content {
     grid-column-start: 2;
     justify-self: center;
     display: flex;
     flex-direction: column;
     width: 100%;
+    padding: 0px 15px 0px 15px;
     align-items: flex-end;
     background-color: var(--background-color);
     font-family: var(--font-family);
     color: var(--text-color);
-    font-size: 15px;
+    font-size: 16px;
     overflow-x: hidden;
 }
 
@@ -207,9 +204,9 @@ section {
     margin-top: 10px;
     margin-bottom: 10px; 
     width: 100%;
-    /* border-color: red;
+    border-color: red;
     border-width: 2px;
-    border-style: solid; */
+    border-style: solid;
 }
 
 div.footer-space {
