--- a/styles/smallest-style.css
+++ b/styles/smallest-style.css
@@ -39,33 +39,15 @@
         grid-row: 3 / -1;
     }
     
-    #aside-grid {
-        grid-template: 1fr / 1fr;
-    }
-    
-    #aside-separator {
-        display: none;
+    div.aside-grid {
+        grid-template: 1fr / 10vw auto 10vw;
     }
     
     aside {
         display: none;
     }
-
-    #about {
-        position: static;
-        margin: 0px auto 0px auto;
-        display: flex;
-        flex-direction: column;
-        width: max-content;
-        align-items: flex-end;
-        background-color: var(--background-color);
-        font-family: var(--font-family);
-        color: var(--text-color);
-        font-size: 15px;
-        overflow-x: hidden;
-    }
     
-    #main-content {
+    div.main-content {
         grid-column-start: 2;
         justify-self: center;
         display: flex;
@@ -78,7 +60,6 @@
         font-size: 15px;
         overflow-x: hidden;
     }
-
     
     /* MAIN SECTIONS */
     
