--- a/styles/blog.css
+++ b/styles/blog.css
@@ -1,5 +1,4 @@
 #blog {
-    color: var(--text-color);
-    margin: 0vw 10vw 0vw 10vw;
-    width: 80vw;
+    margin: 0px auto;
+    text-align: center;
 }
