--- a/styles/mobile-style.css
+++ b/styles/mobile-style.css
@@ -65,9 +65,11 @@
     }
 
     
+
+    
     /* MAIN SECTIONS */
     
-    #about {
+    div.centered {
         grid-column-start: 1;
         width: 80vw;
     }
