--- a/styles/smaller-style.css
+++ b/styles/smaller-style.css
@@ -5,7 +5,7 @@
         display: none;
     }
 
-    #about {
+    div.centered {
         position: static;
         margin: 0px auto 0px auto;
         display: flex;
