--- a/styles/small-style.css
+++ b/styles/small-style.css
@@ -6,7 +6,7 @@
         width: 200px;
     }
 
-    #about {
+    div.centered {
         position: static;
         margin: 0px auto 0px auto;
         display: flex;
